--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Weather App</title>
 </head>
 <body>
     <script type="text/javascript" src="./assets/js/script.js"> </script>
+    <div class="card">
+        <div class="search">
+            <input type="text" class="search-bar">
+            <button><span class="material-symbols-outlined">
+                Search
+                </span></button>
+        </div>
+    </div>
 </body>
 </html>
